@@ -41,11 +41,13 @@ function obj= sistema(varargin)
   obj.li= []; % network topology; lines in (from,to) form
   obj.mi=  0; % start month
   obj.nc=  1; % number of network loops
+  obj.nf=  0; % number of run-off-river hydro plants
   obj.ni=  0; % number of discretized stages
   obj.nj=  0; % number of hydro plants with downstream reservoirs
   obj.nl=  0; % number of transmission lines
   obj.np=  1; % number of load levels per stage
   obj.nq= []; % maximum number of generators in operation (i,j)
+  obj.nr=  0; % number of hydro plants with reservoir
   obj.ns=  0; % number of buses
   obj.nt=  0; % number of thermal plants
   obj.nu=  0; % number of hydro plants
