@@ -2,6 +2,11 @@
 
 	* @io/private/hco_.m: Considerada eliminação das variáveis de volume final.
 
+	* @sistema/{sistema,get,set,dump}.m:
+	(obj.nf, obj.nr): Propriedades adicionadas.
+	
+	* @io/private/uhe_.m: Adicionado cálculo do número de usinas fio-d'água.
+	
 2011-01-06  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
 
 	* @problema/{problema,get,dump}.m:
